# openptv-python

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.html  README.md  README.md.rej  mypy.ini  plans.md  pyproject.toml
.github/workflows/: on-push.yml  publish-to-pypi.yml  python-app.yml  static.yml
ci/: environment-ci.yml
docs/: bundle_adjustment.md  conf.py  generate_native_stress_demo.py  index.md  native_backend_unification.md  render_native_stress_demo_include.py
docs/_static/: native-stress-demo.json
docs/pyptv/: README.md  installation.md  quick-start.md
notebooks/: calibration_with_particles.py  manual_selection.py  marimo_epipolar_opencv_board.py  marimo_epipolar_tool.py  marimo_ui_calibration.py  marimo_ui_detection.py  marimo_ui_parameters.py  test_calibration_optimize.py  test_with_yaml.py  timing_skew_midpoint.py
openptv_python/: _native_compat.py  _native_convert.py  calibration_compare.py  demo_bundle_adjustment.py  generate_synthetic_cavity_case.py  image_processing.py  multimed.py  orientation.py  parameters.py  segmentation.py  track.py  tracking_frame_buf.py
openptv_python/gui/: tracking_with_display.py
scripts/: bump_version.py  check_version.py
src/: _native_compat.py  correspondences.py  generate_synthetic_cavity_case.py  parameters.py  track.py
src/openptv_python/: __init__.py  _native_compat.py  _native_convert.py  calibration.py  calibration_compare.py  correspondences.py  demo_bundle_adjustment.py  epi.py  find_candidate.py  generate_synthetic_cavity_case.py  image_processing.py  imgcoord.py  multimed.py  orientation.py  parameters.py  ray_tracing.py  segmentation.py  track.py  tracking_frame_buf.py  tracking_run.py  trafo.py
src/pyptv/: CHANGES.md  README.md  __main__.py  __version__.py  _backend.py  calibration_gui.py  code_editor.py  detection_gui.py  dumbbell_ground_truth.py  experiment.py  flowtracks_utils.py  ground_truth.py  legacy_parameters.py  mask_gui.py  optimize_calibration.py  parameter_gui.py  parameter_manager.py  parameter_util.py  ptv.py  pyptv_batch.py  pyptv_batch_parallel.py  pyptv_batch_plugins.py  pyptv_gui.py  standalone_calibration.py  standalone_dumbbell_calibration.py  visualize_cameras_nb.py  visualize_rt_is_nb.py
tests/: test_bundle_adjustment.py  test_calibration_compare.py  test_demo_bundle_adjustment.py  test_image_processing.py  test_native_stress_performance.py  test_point_positions.py  test_read_frame.py  test_segmentation.py  test_synthetic_cavity_case.py  test_tracking_ground_truth.py  testing_folder
tests/openptv_python/: gen_track_data.py  merging_yaml.ipynb  test_00_version.py  test_bundle_adjustment.py  test_burgers.py  test_cal_ori_par.py  test_calibration_compare.py  test_corresp.ipynb  test_corresp.py  test_demo_bundle_adjustment.py  test_engine_selection.py  test_fb.py  test_get_mmlut.py  test_init_mmlut.py  test_match_pairs.ipynb  test_memory_stress.py  test_merging_yaml.py  test_multi_plane_par.py  test_multimedia_n_lay.py  test_native_stress_performance.py  test_orient_par.py  test_read_frame.py  test_read_path_frame_bard.py  test_reading_yaml_parameters.py  test_sortgrid.py  test_tracking.py  test_tracking_ground_truth.py  test_tracking_run.py  test_two_camera_matching.py  test_x_cavity.py.bck  testing_fodder
tests/pyptv/: README.md  conftest.py  test_apply_optimizations.py  test_cal_ori_roundtrip.py  test_calibration_utils.py  test_cavity_comprehensive.py  test_core_functionality.py  test_detection_bug.py  test_detection_consistency.py  test_engine_selection.py  test_experiment_par_to_yaml.py  test_ext_sequence_splitter.py  test_ext_sequence_splitter_pytest.py  test_extended_parameters.py  test_image_path_resolution_fixed.py  test_installation.py  test_legacy_parameters_roundtrip.py  test_parameter_manager_prints.py  test_parameter_manager_structure.py  test_parameter_performance.py  test_parameter_util.py  test_populate_cython_parameters.py  test_populate_parameters.py  test_ptv_file_io.py  test_ptv_utilities.py  test_pyptv_batch.py  test_pyptv_batch_parallel.py  test_pyptv_batch_plugins.py  test_standalone_calibration_cycle.py  test_standalone_dumbbell_calibration_cycle.py  test_track_parameters.py  test_track_res_vs_res_orig.py  test_tracker_minimal.py  test_tracking_analysis.py  test_tracking_parameter_bug.py  test_tracking_parameter_optimization.py  test_tracking_parameters.py
tests/testing_folder/: parameters_Run1.yaml
(+65 files in other folders)
