[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "mypy>=1.19.1",
  "myst-parser>=5.0.0",
  "numba>=0.64.0",
  "numpy>=2.4.2",
  "pre-commit>=4.5.1",
  "pydata-sphinx-theme>=0.16.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pyyaml>=6.0.3",
  "scipy>=1.17.1",
  "sphinx>=9.1.0",
  "sphinx-autoapi>=3.7.0",
  "types-pyyaml>=6.0.12.20250915",
]
description = "Python version of the OpenPTV library"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "openptv-python"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = false

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["openptv_python"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "openptv_python/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
